--- a/week1/bovw/BagofVisualWords.ipynb
+++ b/week1/bovw/BagofVisualWords.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "NUMBER_OF_SIFT_FEATURES = 800\n",
     "VOCABULARY_SIZE = 128\n",
-    "NUMBER_OF_NEIGHBOURS = 5\n",
-    "DISTANCE_METRIC = 'euclidean'"
+    "NUMBER_OF_NEIGHBOURS = 15\n",
+    "DISTANCE_METRIC = 'braycurtis'"
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "'../../Databases/MIT_split/train/Opencountry/fie26.jpg'"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,8 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "SIFTdetector = cv2.xfeatures2d.SIFT_create(nfeatures=NUMBER_OF_SIFT_FEATURES)"
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +132,7 @@
        "                reassignment_ratio=0.0001, tol=0.0, verbose=False)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,18 +171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='euclidean',\n",
-       "                     metric_params=None, n_jobs=-1, n_neighbors=5, p=2,\n",
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='braycurtis',\n",
+       "                     metric_params=None, n_jobs=-1, n_neighbors=15, p=2,\n",
        "                     weights='uniform')"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,14 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60.09913258983891\n"
+      "64.06443618339529\n"
      ]
     }
    ],
@@ -240,21 +244,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "59.355638166047086\n"
+      "62.0817843866171\n"
      ]
     }
    ],
    "source": [
     "pca = PCA(n_components=64)\n",
     "VWpca = pca.fit_transform(visual_words)\n",
-    "knnpca = KNeighborsClassifier(n_neighbors=5,n_jobs=-1,metric='euclidean')\n",
+    "knnpca = KNeighborsClassifier(n_neighbors=NUMBER_OF_NEIGHBOURS,n_jobs=-1,metric=DISTANCE_METRIC)\n",
     "knnpca.fit(VWpca, train_labels) \n",
     "vwtestpca = pca.transform(visual_words_test)\n",
     "accuracy = 100*knnpca.score(vwtestpca, test_labels)\n",
@@ -263,16 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.7/site-packages/sklearn/discriminant_analysis.py:466: ChangedBehaviorWarning: n_components cannot be larger than min(n_features, n_classes - 1). Using min(n_features, n_classes - 1) = min(128, 8 - 1) = 7 components.\n",
+      "c:\\python37\\lib\\site-packages\\sklearn\\discriminant_analysis.py:463: ChangedBehaviorWarning: n_components cannot be larger than min(n_features, n_classes - 1). Using min(n_features, n_classes - 1) = min(128, 8 - 1) = 7 components.\n",
       "  ChangedBehaviorWarning)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/discriminant_analysis.py:472: FutureWarning: In version 0.23, setting n_components > min(n_features, n_classes - 1) will raise a ValueError. You should set n_components to None (default), or a value smaller or equal to min(n_features, n_classes - 1).\n",
+      "c:\\python37\\lib\\site-packages\\sklearn\\discriminant_analysis.py:469: FutureWarning: In version 0.23, setting n_components > min(n_features, n_classes - 1) will raise a ValueError. You should set n_components to None (default), or a value smaller or equal to min(n_features, n_classes - 1).\n",
       "  warnings.warn(future_msg, FutureWarning)\n"
      ]
     },
@@ -280,14 +286,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "63.94052044609665\n"
+      "66.54275092936803\n"
      ]
     }
    ],
    "source": [
     "lda = LinearDiscriminantAnalysis(n_components=64)\n",
     "VWlda = lda.fit_transform(visual_words,train_labels)\n",
-    "knnlda = KNeighborsClassifier(n_neighbors=5,n_jobs=-1,metric='euclidean')\n",
+    "knnlda = KNeighborsClassifier(n_neighbors=NUMBER_OF_NEIGHBOURS,n_jobs=-1,metric=DISTANCE_METRIC)\n",
     "knnlda.fit(VWlda, train_labels) \n",
     "vwtestlda = lda.transform(visual_words_test)\n",
     "accuracy = 100*knnlda.score(vwtestlda, test_labels)\n",
@@ -318,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
