Changes on Notebook

--- a/Week2/SVM.ipynb
+++ b/Week2/SVM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,17 +70,6 @@
    "metadata": {},
    "source": [
     "In this experiment we will fix the vocabulary size, and we will only change the step and try different sizes of the DenseSIFT descriptors. In addition we will substitute the KNN with a SVM. We will also eliminate the LDA. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N_CLUSTERS = 128\n",
-    "K_FOLDS = 5\n",
-    "param_grid = {'C': [1], 'kernel': ['rbf'], 'gamma': ['scale']}"
    ]
   },
   {
@@ -119,6 +108,9 @@
     }
    ],
    "source": [
+    "N_CLUSTERS = 128\n",
+    "K_FOLDS = 5\n",
+    "param_grid = {'C': [1], 'kernel': ['rbf'], 'gamma': ['scale']}\n",
     "step_sizes = [8, 16, 32]\n",
     "descriptor_sizes_dict = {8: [[1],[0.5,1]], 16: [[1],[0.5,1],[0.25,0.5,0.75,1]], 32: [[1],[0.5,1],[0.25,0.5,0.75,1]]}\n",
     "results_test = []\n",
@@ -135,22 +127,22 @@
     "        train_data_path = SAVE_PATH+'data'+os.sep+'train'+str(N_CLUSTERS)+'_'+str(step_size)+'_'+'-'.join([str(i) for i in descriptor_sizes])+'.dat'\n",
     "        test_data_path = SAVE_PATH+'data'+os.sep+'test'+str(N_CLUSTERS)+'_'+str(step_size)+'_'+'-'.join([str(i) for i in descriptor_sizes])+'.dat'\n",
     "        if all(os.path.isfile(path) for path in [train_desc_path,test_desc_path,train_data_path,test_data_path]):\n",
-    "            train_descriptors = pickle.load(open(train_desc_path, 'rb'))\n",
-    "            test_descriptors = pickle.load(open(test_desc_path,'rb'))\n",
+    "            train_desc = pickle.load(open(train_desc_path, 'rb'))\n",
+    "            test_desc = pickle.load(open(test_desc_path,'rb'))\n",
     "            train_data = pickle.load(open(train_data_path,'rb'))\n",
     "            test_data = pickle.load(open(test_data_path,'rb'))\n",
     "        else:\n",
     "            with CodeTimer(\"Obtain training and test data\"):\n",
     "                # Compute DenseSIFT descriptors for train and test sets\n",
-    "                train_descriptors = DenseSIFT.compute(train_img_paths, step_size, descriptor_sizes)\n",
-    "                test_descriptors = DenseSIFT.compute(test_img_paths, step_size, descriptor_sizes)\n",
+    "                train_desc = DenseSIFT.compute(train_img_paths, step_size, descriptor_sizes)\n",
+    "                test_desc = DenseSIFT.compute(test_img_paths, step_size, descriptor_sizes)\n",
     "                # Save computed data\n",
-    "                pickle.dump(train_descriptors, open(train_desc_path, 'wb'))\n",
-    "                pickle.dump(test_descriptors, open(test_desc_path, 'wb'))\n",
+    "                pickle.dump(train_desc, open(train_desc_path, 'wb'))\n",
+    "                pickle.dump(test_desc, open(test_desc_path, 'wb'))\n",
     "                # Obtain visual words for train and test sets\n",
-    "                VisualWords.fit(train_descriptors)\n",
-    "                train_data = VisualWords.get_visual_words(train_descriptors)\n",
-    "                test_data = VisualWords.get_visual_words(test_descriptors)\n",
+    "                VisualWords.fit(train_desc)\n",
+    "                train_data = VisualWords.get_visual_words(train_desc)\n",
+    "                test_data = VisualWords.get_visual_words(test_desc)\n",
     "                # Save computed data\n",
     "                pickle.dump(train_data, open(train_data_path, 'wb'))\n",
     "                pickle.dump(test_data, open(test_data_path, 'wb'))\n",
@@ -235,16 +227,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "STEP_SIZE = 16\n",
-    "DESC_SIZE = [0.5,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -280,6 +262,8 @@
     }
    ],
    "source": [
+    "STEP_SIZE = 16\n",
+    "DESC_SIZE = [8,16]\n",
     "N_CLUSTERS = [128, 256, 384, 512, 640, 768, 896, 1024]\n",
     "results_test = []\n",
     "results_train = []\n",
@@ -292,22 +276,22 @@
     "    train_data_path = SAVE_PATH+'data'+os.sep+'train'+str(n_cluster)+'_'+str(STEP_SIZE)+'_8-16.dat'\n",
     "    test_data_path = SAVE_PATH+'data'+os.sep+'test'+str(n_cluster)+'_'+str(STEP_SIZE)+'_8-16.dat'\n",
     "    if all(os.path.isfile(path) for path in [train_desc_path,test_desc_path,train_data_path,test_data_path]):\n",
-    "        train_descriptors = pickle.load(open(train_desc_path, 'rb'))\n",
-    "        test_descriptors = pickle.load(open(test_desc_path,'rb'))\n",
+    "        train_desc = pickle.load(open(train_desc_path, 'rb'))\n",
+    "        test_desc = pickle.load(open(test_desc_path,'rb'))\n",
     "        train_data = pickle.load(open(train_data_path,'rb'))\n",
     "        test_data = pickle.load(open(test_data_path,'rb'))\n",
     "    else:\n",
     "        with CodeTimer(\"Obtain training and test data\"):\n",
     "            # Compute DenseSIFT descriptors for train and test sets\n",
-    "            train_descriptors = DenseSIFT.compute(train_img_paths, STEP_SIZE, DESC_SIZE)\n",
-    "            test_descriptors = DenseSIFT.compute(test_img_paths, STEP_SIZE, DESC_SIZE)\n",
+    "            train_desc = DenseSIFT.compute(train_img_paths, STEP_SIZE, DESC_SIZE)\n",
+    "            test_desc = DenseSIFT.compute(test_img_paths, STEP_SIZE, DESC_SIZE)\n",
     "            # Save computed data\n",
-    "            pickle.dump(train_descriptors, open(train_desc_path, 'wb'))\n",
-    "            pickle.dump(test_descriptors, open(test_desc_path, 'wb'))\n",
+    "            pickle.dump(train_desc, open(train_desc_path, 'wb'))\n",
+    "            pickle.dump(test_desc, open(test_desc_path, 'wb'))\n",
     "            # Obtain visual words for train and test sets\n",
-    "            VisualWords.fit(train_descriptors)\n",
-    "            train_data = VisualWords.get_visual_words(train_descriptors)\n",
-    "            test_data = VisualWords.get_visual_words(test_descriptors)\n",
+    "            VisualWords.fit(train_desc)\n",
+    "            train_data = VisualWords.get_visual_words(train_desc)\n",
+    "            test_data = VisualWords.get_visual_words(test_desc)\n",
     "            # Save computed data\n",
     "            pickle.dump(train_data, open(train_data_path, 'wb'))\n",
     "            pickle.dump(test_data, open(test_data_path, 'wb'))\n",
@@ -362,6 +346,80 @@
     "2. kernel -- (Specifies the kernel): RBF\n",
     "3. gamma -- (Kernel coefficient): scale\n",
     "5. decision_function_shape -- (Whether to return a one-vs-rest or other settings): ovr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N_CLUSTERS = 896\n",
+    "STEP_SIZE = 16\n",
+    "DESC_SIZE = [8,16]\n",
+    "K_FOLDS = 5\n",
+    "PARAMETERS = {\n",
+    "    'C':np.logspace(-5, 15, 5, base=2),\n",
+    "    'gamma':np.logspace(-15, 3, 5, base=2),\n",
+    "    'kernel':[\"linear\", \"rbf\", \"sigmoid\", histogram_intersection_kernel],\n",
+    "    'tol': np.logspace(-5,0,5,base=10),\n",
+    "    'decision_function_shape':['ovo', 'ovr']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtain training and test data: 0.1234288215637207 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "DenseSIFT = DenseSIFT_()\n",
+    "VisualWords = VisualWords_(N_CLUSTERS)\n",
+    "train_desc_path = SAVE_PATH+'desc'+os.sep+'train_exp_2.dat'\n",
+    "test_desc_path = SAVE_PATH+'desc'+os.sep+'test_exp_2.dat'\n",
+    "train_data_path = SAVE_PATH+'data'+os.sep+'train_exp_2.dat'\n",
+    "test_data_path = SAVE_PATH+'data'+os.sep+'test_exp_2.dat'\n",
+    "with CodeTimer(\"Obtain training and test data\"):\n",
+    "    # Check for existing data files already computed\n",
+    "    if all(os.path.isfile(path) for path in [train_data_path, test_data_path, train_desc_path, test_desc_path]):\n",
+    "        train_data = pickle.load(open(train_data_path, 'rb'))\n",
+    "        test_data = pickle.load(open(test_data_path, 'rb'))\n",
+    "        train_desc = pickle.load(open(train_data_path, 'rb'))\n",
+    "        test_desc = pickle.load(open(test_data_path, 'rb'))\n",
+    "    else:\n",
+    "        # Compute DenseSIFT descriptors for train and test sets\n",
+    "        train_desc = DenseSIFT.compute(train_img_paths, STEP_SIZE, DESC_SIZE)\n",
+    "        test_desc = DenseSIFT.compute(test_img_paths, STEP_SIZE, DESC_SIZE)\n",
+    "        # Save computed data\n",
+    "        pickle.dump(train_desc, open(train_desc_path, 'wb'))\n",
+    "        pickle.dump(test_desc, open(test_desc_path, 'wb'))\n",
+    "        # Obtain visual words for train and test sets\n",
+    "        VisualWords.fit(train_desc)\n",
+    "        train_data = VisualWords.get_visual_words(train_desc)\n",
+    "        test_data = VisualWords.get_visual_words(test_desc)\n",
+    "        # Save computed data\n",
+    "        pickle.dump(train_data, open(train_data_path, 'wb'))\n",
+    "        pickle.dump(test_data, open(test_data_path, 'wb'))\n",
+    "\n",
+    "# Train SVM with cross-validation 5-fold\n",
+    "with CodeTimer(\"Train SVM\"):\n",
+    "    cv = GridSearchCV(SVC(), param_grid=PARAMETERS, cv=K_FOLDS)\n",
+    "    cv.fit(train_data, train_labels)\n",
+    "\n",
+    "# Test SVM\n",
+    "with CodeTimer(\"Test SVM\"):\n",
+    "    train_score = cv.score(train_data, train_labels)\n",
+    "    test_score = cv.score(test_data, test_labels)\n",
+    "        \n",
+    "print(\"Train accuracy score: {}\\nTest accuracy score: {}\\nBest params: {}\\n\".format(train_score, test_score, cv.best_params_))\n",
+    "print(\"All results: {}\".format(cv.cv_results_))"
    ]
   }
  ],
