--- a/Week2/Pyramid.ipynb
+++ b/Week2/Pyramid.ipynb
@@ -53,6 +53,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we use the parameters that provided the best results until the moment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -192,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can observe that using 896 clusters keeps on providing the best results after using scaling and a 2-level pyramid. Todo: explicació."
+    "We can observe that using 896 clusters provides the best results after using scaling and a 2-level pyramid."
    ]
   },
   {
