--- a/Week2/SVM_Fisher.ipynb
+++ b/Week2/SVM_Fisher.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,15 +25,15 @@
     "\n",
     "from utils.CodeTimer import CodeTimer\n",
     "from utils.DatasetManager import DatasetManager\n",
-    "from descriptors.SIFT import DenseSIFT as DenseSIFT_\n",
-    "from descriptors.VisualWords import VisualWords as VisualWords_\n",
+    "from descriptors.SIFT import DenseSIFT\n",
+    "from descriptors.VisualWords import VisualWords\n",
     "from utils.Kernels import histogram_intersection_kernel\n",
     "from fishervector import FisherVectorGMM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,25 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_desc_path = SAVE_PATH + 'desc_fisher' + os.sep + 'train.dat'\n",
-    "test_desc_path = SAVE_PATH  + 'desc_fisher' + os.sep + 'test.dat'\n",
-    "train_data_path = SAVE_PATH + 'data_fisher' + os.sep + 'train.dat'\n",
-    "test_data_path = SAVE_PATH  + 'data_fisher' + os.sep + 'test.dat'\n",
-    "\n",
-    "train_desc = DenseSIFT.compute(train_img_paths, STEP_SIZE, DESC_SIZE)\n",
-    "test_desc = DenseSIFT.compute(test_img_paths, STEP_SIZE, DESC_SIZE)\n",
-    "# Save computed data\n",
-    "pickle.dump(train_desc, open(train_desc_path, 'wb'))\n",
-    "pickle.dump(test_desc, open(test_desc_path, 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +59,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DenseSIFT = DenseSIFT()\n",
+    "train_desc_path = SAVE_PATH + 'desc_fisher' + os.sep + 'train.dat'\n",
+    "test_desc_path = SAVE_PATH  + 'desc_fisher' + os.sep + 'test.dat'\n",
+    "train_data_path = SAVE_PATH + 'data_fisher' + os.sep + 'train.dat'\n",
+    "test_data_path = SAVE_PATH  + 'data_fisher' + os.sep + 'test.dat'\n",
+    "\n",
+    "train_desc = DenseSIFT.compute(train_img_paths, STEP_SIZE, DESC_SIZE)\n",
+    "test_desc = DenseSIFT.compute(test_img_paths, STEP_SIZE, DESC_SIZE)\n",
+    "# Save computed data\n",
+    "pickle.dump(train_desc, open(train_desc_path, 'wb'))\n",
+    "pickle.dump(test_desc, open(test_desc_path, 'wb'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -93,8 +94,8 @@
      "output_type": "stream",
      "text": [
       "(300, 256, 64)\n",
-      "fitted GMM with 15 kernels\n",
-      "(10, 30, 64)\n"
+      "fitted GMM with 5 kernels\n",
+      "(10, 10, 64)\n"
      ]
     }
    ],
@@ -105,7 +106,7 @@
     "print(image_data.shape)\n",
     "#image_data = np.concatenate([np.random.normal(np.ones(30), size=shape), np.random.normal(np.ones(30), size=shape)], axis=0)\n",
     "from fishervector import FisherVectorGMM\n",
-    "fv_gmm_test = FisherVectorGMM(n_kernels=15).fit(image_data)\n",
+    "fv_gmm_test = FisherVectorGMM(n_kernels=5).fit(image_data)\n",
     "image_data_test = image_data[:10] # use a fraction of the data to compute the fisher vectors\n",
     "fv = fv_gmm_test.predict(image_data_test)\n",
     "print(fv.shape)"
@@ -113,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "STEP_SIZE = 16\n",
     "DESC_SIZE = [8,16]\n",
     "N_CLUSTERS = 256\n",
-    "N_KERNELS = 15\n",
+    "N_KERNELS = 5\n",
     "K_FOLDS = 5\n",
     "PARAMETERS = {\n",
     "    'C': [1e-1],\n",
@@ -130,28 +131,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1881, 256)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(1881, 512, 128)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "VisualWords = VisualWords_(N_CLUSTERS)\n",
-    "VisualWords.fit(train_desc)\n",
-    "vw_train_data = VisualWords.get_visual_words(train_desc)\n",
-    "print(np.array(vw_train_data).shape)\n",
-    "vw_test_data = VisualWords.get_visual_words(test_desc)"
+    "np.array(train_desc).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
      "output_type": "stream",
      "text": [
       "Compute FisherVectors Gaussian Mixture Model\n",
-      "fitted GMM with 15 kernels\n"
+      "fitted GMM with 5 kernels\n"
      ]
     }
    ],
@@ -173,26 +173,26 @@
     "test_desc = pickle.load(open(test_desc_path, 'rb'))\n",
     "# Obtain Fisher Vectors for train and test sets\n",
     "print(\"Compute FisherVectors Gaussian Mixture Model\")\n",
-    "fv_gmm = FisherVectorGMM(n_kernels=N_KERNELS).fit(np.array(train_desc))"
+    "fv_gmm = FisherVectorGMM(n_kernels=N_KERNELS).fit(np.array(train_desc).reshape())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data_500 = fv_gmm.predict(np.array(train_desc)[0:500])\n",
+    "train_data_500 = fv_gmm.predict(np.array(train_desc)[:20])\n",
     "train_data_500_1000 = fv_gmm.predict(np.array(train_desc)[500:1000])\n",
     "train_data_1000_1500 = fv_gmm.predict(np.array(train_desc)[1000:1500])\n",
     "train_data_1500_end = fv_gmm.predict(np.array(train_desc)[1500:np.array(train_desc).shape[0]])\n",
     "train_data = np.concatenate((train_data_500, train_data_500_1000, train_data_1000_1500, train_data_1500_end), axis=0)\n",
-    "pickle.dump(train_data, open(train_data_path, 'wb'))\n",
+    "pickle.dump(train_data_500, open(train_data_path, 'wb'))\n",
     "\n",
-    "test_data_500  = fv_gmm.predict(np.array(test_desc)[0:500])\n",
+    "test_data_500  = fv_gmm.predict(np.array(test_desc)[:20])\n",
     "test_data_500_end  = fv_gmm.predict(np.array(test_desc)[500:np.array(test_desc).shape[0]])\n",
     "test_data = np.concatenate((test_data_500, test_data_500_end), axis=0)\n",
-    "pickle.dump(test_data, open(test_data_path, 'wb'))"
+    "pickle.dump(test_data_500, open(test_data_path, 'wb'))"
    ]
   },
   {
@@ -253,7 +253,10 @@
    "source": [
     "train_data = pickle.load(open(train_data_path, 'rb'))\n",
     "test_data = pickle.load(open(test_data_path, 'rb'))\n",
-    "        \n",
+    "\n",
+    "train_data = train_data.reshape(1881,30*128)\n",
+    "test_data = test_data.reshape(1881,30*128)\n",
+    "\n",
     "with CodeTimer(\"Train SVM\"):\n",
     "    print(\"Train SVM\")\n",
     "    cvNotNormalized = GridSearchCV(SVC(), param_grid=PARAMETERS, cv=K_FOLDS, n_jobs=-1, verbose=5)\n",
@@ -283,6 +286,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
