--- a/Week2/SVM.ipynb
+++ b/Week2/SVM.ipynb
@@ -982,7 +982,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In fact, using the pyramid seems to work better in average."
+    "The pyramid outperforms the previous method for any value of clusters, reaching the highest precision at 896 with 89.47% percent. This means that using descriptors that take into account the position work better than if descriptors of the full image are taken."
    ]
   },
   {
@@ -991,6 +991,17 @@
    "source": [
     "FISHER\n",
     "--"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are still very intrigued about if it is possible to reach precisions higher than 90%, that's why we have installed the yael library and tried the fisher vectors.\n",
+    "\n",
+    "Instead of computing the data using the bag of visual words, many papers suggest that fisher vectors work at state of art precision. Fisher vectors are inspired by useing Gaussian Mixture Models and approximate the probability density of the data.\n",
+    "\n",
+    "We will then pass this data through the SVM and see if the results are better or worst. We i"
    ]
   },
   {
